# llvm-cbe

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  LICENSE.TXT  Makefile  Makefile.llvm.config.in  Makefile.llvm.rules  README.md  action.yml  config.status  configure  docker-compose.yml
.github/workflows/: build.yml  main.yml
autoconf/: aclocal.m4  configure.ac
autoconf/autom4te.cache/: output.1  requests  traces.0  traces.1
include/: sample.h
lib/: CMakeLists.txt  Makefile
runtime/windows/: atomics.c
test/: .gitignore  APInt-C.cpp  APInt-C.h  CBEWarningsErrors.txt  Makefile  dtypes.h  makefile  platform.h  test001.c  test002.c  test003.c  test004.c  test005.c  test006.c  test007.c  test008.c  test009.c  test010.c  test011.c  test012.c  test013.c  test014.c  test015.c  test016.c  test017.c  test018.c  test019.c  test020.c  test021.c  test022.c  test023.c  test024.c  test025.c  test026.c  test027.c  test028.c  test029.c  test030.c  test031.c  test032.c  (+133 more)
test/c_tests/compound_types/: test_array_of_structs.c  test_get_array_element.c  test_get_struct_member.c  test_get_union_member.c  test_nested_struct.c  test_self_ref_struct.c  test_sizeof_packed_struct.c  test_sizeof_union.c  test_two_dim_array.c  test_two_dim_array_pointer.c  test_typedef_struct.c  test_zero_length_array.c
test/c_tests/declarations/: test_declare_char.c  test_declare_double.c  test_declare_float.c  test_declare_int.c  test_declare_long.c  test_declare_long_double.c  test_declare_long_int.c  test_declare_long_long.c  test_declare_long_long_int.c  test_declare_short.c  test_declare_short_int.c  test_declare_signed_char.c  test_declare_signed_int.c  test_declare_signed_long.c  test_declare_signed_long_int.c  test_declare_signed_long_long.c  test_declare_signed_long_long_int.c  test_declare_signed_short.c  test_declare_signed_short_int.c  test_declare_unsigned_char.c  test_declare_unsigned_int.c  test_declare_unsigned_long.c  test_declare_unsigned_long_int.c  test_declare_unsigned_long_long.c  test_declare_unsigned_long_long_int.c  test_declare_unsigned_short.c  test_declare_unsigned_short_int.c  test_declare_volatile_unsigned_int.c
test/c_tests/functions/: test_casted_nested_function_ptr_argument.c  test_fibonacci_function.c  test_function_ptr.c  test_function_ptr_argument.c  test_function_ptr_select.c  test_head_recursion.c  test_nested_function_ptr_argument.c  test_recursive_function.c  test_simple_function.c  test_static_function.c  test_struct_function_argument.c  test_tail_recursion.c  test_zero_length_array_argument.c
test/c_tests/operators/: test_add_int_vars.c  test_bitwise_and.c  test_bitwise_not.c  test_bitwise_or.c  test_bitwise_shl.c  test_bitwise_shr.c  test_bitwise_xor.c  test_compound_add_assign.c  test_compound_bitwise_and_assign.c  test_compound_bitwise_or_assign.c  test_compound_bitwise_xor_assign.c  test_compound_divide_assign.c  test_compound_modulus_assign.c  test_compound_multiply_assign.c  test_compound_shl_assign.c  test_compound_shr_assign.c  test_compound_subtract_assign.c  test_divide_int_vars.c  test_equal_operator.c  test_greater_than.c  test_greater_than_or_equal.c  test_less_than.c  test_less_than_or_equal.c  test_logical_and.c  test_logical_or.c  test_modulus_int_vars.c  test_multiply_int_vars.c  test_not_equal_operator.c  test_postincrement.c  test_preincrement.c  test_subtract_int_vars.c  test_unary_minus_int.c  test_unary_plus_char.c
test/c_tests/other/: test_constructor.c  test_macro_substitution.c  test_mutual_ref_globals.c  test_null_is_0.c  test_register_vars.c  test_return_success.c  test_static_vars.c  test_test_failure.c
test/c_tests/pointers/: test_address_of_operator.c  test_char_sized_ptr_math_decr.c  test_char_sized_ptr_math_incr.c  test_deref_array_item.c  test_deref_char_ptr.c  test_deref_double_ptr.c  test_deref_float_ptr.c  test_deref_int_ptr.c  test_deref_struct_ptr.c  test_int_sized_ptr_math_decr.c  test_int_sized_ptr_math_incr.c
test/c_tests/statements/: test_break_stmt.c  test_goto_stmt.c  test_nested_for_loop.c  test_nested_switch_stmt.c  test_nested_while_loop.c  test_simple_do_while.c  test_simple_for_loop.c  test_simple_if_else.c  test_simple_if_else_use_else.c  test_simple_if_stmt.c  test_simple_switch_stmt.c  test_simple_while_loop.c
test/c_tests/stdatomic/: test_atomic_compare_exchange_strong.c  test_atomic_compare_exchange_weak.c  test_atomic_exchange.c  test_atomic_fence.c  test_atomic_fetch_add.c  test_atomic_fetch_and.c  test_atomic_fetch_or.c  test_atomic_fetch_sub.c  test_atomic_fetch_xor.c  test_atomic_load.c  test_atomic_store.c
test/cpp_tests/: test_ctor.cpp  test_dtor.cpp  test_dtor_called_when_unwinding.cpp  test_exception_from_ctor.cpp  test_is_constant.cpp  test_multiple_exception_handlers.cpp  test_my_exception.cpp  test_std_exception.cpp  test_virtual_function_calls.cpp
test/hello_world/: .gitignore  main.c
test/ll_tests/: test_addressable_empty_types.ll  test_bitcounts.ll  test_bswap.ll  test_byval_struct_param.ll  test_compile_opaque_struct_with_function.ll  test_empty_array_geps.ll  test_empty_array_geps_struct.ll  test_fun_ptr_dependencies.ll  test_fun_ptr_only_refd_by_function.ll  test_fun_ptr_only_refd_by_struct.ll  test_function_alias.ll  test_gep_index_vec.ll  test_global_var_order.ll  test_if_bool_xor.ll  test_intrinsic_sadd_sat.ll  test_intrinsic_sadd_with_overflow.ll  test_intrinsic_sshl_sat.ll  test_intrinsic_uadd_sat.ll  test_intrinsic_uadd_with_overflow.ll  test_intrinsic_ushl_sat.ll  test_min_max_intrinsics.ll  test_not_power_2_ints.ll  test_simple_return.ll  test_trap.ll
test/selectionsort/: main.c
tools/: CMakeLists.txt  Makefile
tools/llvm-cbe/: CMakeLists.txt  LLVMBuild.txt  Makefile  llvm-cbe.cpp
unittests/: CMakeLists.txt  TypeNameTest.cpp
